traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:19: error: '(' expected but '{' found.
    } else if {
              ^TraversalDiagonal:26: error: illegal start of simple expression
  }
  ^